--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="La livraison d'une commande via un site de e-commerce peut s'avérer difficile (horaires inadaptés). Nous vous mettons en relation avec vos voisins qui peuvent réceptionner vos colis." />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="./imgs/logo.png" />
+  <link rel="icon apple-touch-icon apple-touch-icon-precomposed" type="image/png" href="./imgs/logo.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald|Droid+Serif">
