forgot to put a antibackslash before apostrophee

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Relayers</title>
-  <meta name="description" content="La livraison d'une commande via un site de e-commerce peut s'avérer difficile (horaires inadaptés). Nous vous mettons en relation avec vos voisins qui peuvent réceptionner vos colis." />
+  <meta name="description" content="La livraison d\'une commande via un site de e-commerce peut s\'avérer difficile (horaires inadaptés). Nous vous mettons en relation avec vos voisins qui peuvent réceptionner vos colis." />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon apple-touch-icon apple-touch-icon-precomposed" type="image/png" href="./imgs/logo.png" />
