--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>Relayers</title>
   <meta name="description" content="La livraison d\'une commande via un site de e-commerce est souvent difficile (horaires incompatibles). Nous vous mettons en relation avec vos voisins qui peuvent réceptionner vos colis." />
-  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Relayers" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="./imgs/logo.png" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://relayers.fr" />
+  <meta property="og:title" content="Relayers" />
+  <meta property="og:image" content="https://relayers.fr/imgs/logo.png" />
+  <meta property="og:description" content="La livraison d\'une commande via un site de e-commerce est souvent difficile (horaires incompatibles). Nous vous mettons en relation avec vos voisins qui peuvent receptionner vos colis." />
+  <meta property="og:url" content="relayers.fr" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon apple-touch-icon apple-touch-icon-precomposed" type="image/png" href="./imgs/logo.png" />
