icones comment ca marche

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,18 +18,6 @@
   <link rel="stylesheet" href="./css/social_icons.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./javascript/google_localisation_inscription.js"></script>
-
-  <style>
-  /* Always set the map height explicitly to define the size of the div
-  * element that contains the map. */
-  #map {
-    height: 100%;
-  }
-  /* z-index allows autocomplete to be above the dropdown-menu */
-  .pac-container {
-    z-index: 2000;
-  }
-  </style>
 </head>
 
 
@@ -257,18 +245,21 @@
   <div class="container-fluid" id="about">
     <div class="row">
       <h1>Comment ça marche ?</h1>
-      <h3><i>En 3 étapes ...</i></h3>
+      <br>
+      <h3>En 3 étapes :</h3>
       <hr>
+      <br>
       <div class="col-lg-4">
-        <h2>&#9312; Commande</h2>
+
+        <h2><img src="./imgs/commande.png" alt="commande" style="width:20%;"> Commande</h2>
         <p>Votre voisin souhaite commander un article sur un site de e-commerce partenaire, mais il n'est pas disponible pour réceptionner ce colis. Heureusement, vous l'êtes ! Il va donc choisir le mode de livraison "Relayers" et vous sélectionner pour que son colis soit livré directement chez vous !</p>
       </div>
       <div class="col-lg-4">
-        <h2>&#9313; Réception</h2>
+        <h2><img src="./imgs/reception.png" alt="reception" style="width:20%;"> Réception</h2>
         <p>Vous réceptionnez le colis de votre voisin, et le gardez précieusement chez vous jusqu'à que votre voisin vienne le chercher.</p>
       </div>
       <div class="col-lg-4">
-        <h2>&#9314; Rémunération</h2>
+        <h2><img src="./imgs/remuneration.png" alt="remuneration" style="width:20%;"> Rémunération</h2>
         <p>En plus de rendre service à votre voisin, vous êtes rémunéré pour le service rendu !</p>
       </div>
     </div>
