refonte de l'index

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -98,7 +98,7 @@
                     </form>
                   </div>
                   <div class="bottom text-center">
-                    Vous êtes nouveau ? <br> <a href="" data-toggle="modal" data-target="#registerModal"><b>Rejoignez nous !</b></a>
+                    Pas encore inscrit ? <br> <a href="" data-toggle="modal" data-target="#registerModal"><b>S'inscrire</b></a>
                   </div>
                 </div>
               </li>
@@ -234,9 +234,9 @@
 
       <h1>Une journée à la maison ?</h1>
 
-      <h2>Réceptionnez des colis pour vos voisins et soyez rémunéré !</h2>
+      <h2>Réceptionnez des colis pour vos voisins et soyez rémunéré pour ce service</h2>
 
-      <button class="btn btn-default btn-lg" type="button" data-toggle="modal" data-target="#registerModal">Inscrivez-vous gratuitement !</button>
+      <button class="btn btn-default btn-lg" type="button" data-toggle="modal" data-target="#registerModal">Devenir Relayer</button>
 
     </div>
   </div>
@@ -245,24 +245,38 @@
   <div class="container-fluid" id="about">
     <div class="row">
       <h1>Comment ça marche ?</h1>
-      <br>
-      <h3>En 3 étapes :</h3>
-      <hr>
-      <br>
+      <div class="col-lg-3">
+        <h2><img src="./imgs/inscription.gif" alt="inscription" style="width:20%;"><br>Je m'inscris sur la plateforme</h2>
+      </div>
+      <div class="col-lg-3">
+        <h2><img src="./imgs/agenda.png" alt="agenda" style="width:20%;"><br>Je rentre mes disponibilités</h2>
+      </div>
+      <div class="col-lg-3">
+        <h2><img src="./imgs/parcel.png" alt="parcel" style="width:20%;"><br>Je recois des colis pour mes voisins</h2>
+      </div>
+      <div class="col-lg-3">
+        <h2><img src="./imgs/monnaie.png" alt="monnaie" style="width:20%;"><br>Je suis rémunéré pour ce service rendu</h2>
+      </div>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <div class="row">
+      <h1>Concrètement</h1>
       <div class="col-lg-4">
-
         <h2><img src="./imgs/commande.png" alt="commande" style="width:20%;"> Commande</h2>
         <p>Votre voisin souhaite commander un article sur un site de e-commerce partenaire, mais il n'est pas disponible pour réceptionner ce colis. Heureusement, vous l'êtes ! Il va donc choisir le mode de livraison "Relayers" et vous sélectionner pour que son colis soit livré directement chez vous !</p>
       </div>
       <div class="col-lg-4">
         <h2><img src="./imgs/reception.png" alt="reception" style="width:20%;"> Réception</h2>
-        <p>Vous réceptionnez le colis de votre voisin, et le gardez précieusement chez vous jusqu'à que votre voisin vienne le chercher.</p>
+        <p>Vous réceptionnez le colis de votre voisin, et le gardez précieusement chez vous jusqu'à ce que votre voisin vienne le chercher.</p>
       </div>
       <div class="col-lg-4">
         <h2><img src="./imgs/remuneration.png" alt="remuneration" style="width:20%;"> Rémunération</h2>
-        <p>En plus de rendre service à votre voisin, vous êtes rémunéré pour le service rendu !</p>
+        <p>En plus de rendre service à votre voisin, vous êtes rémunéré 2€ !</p>
       </div>
     </div>
+
   </div>
 
   <div class="container-fluid" id="contact">
