--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -246,7 +246,7 @@
     <div class="row">
       <h1>Comment ça marche ?</h1>
       <div class="col-lg-3">
-        <h2><img src="./imgs/inscription.gif" alt="inscription" style="width:20%;"><br>Je m'inscris sur la plateforme</h2>
+        <h2><img src="./imgs/inscription.png" alt="inscription" style="width:20%;"><br>Je m'inscris sur la plateforme</h2>
       </div>
       <div class="col-lg-3">
         <h2><img src="./imgs/agenda.png" alt="agenda" style="width:20%;"><br>Je rentre mes disponibilités</h2>
