--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,10 @@
   <link rel="stylesheet" href="./css/social_icons.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./javascript/google_localisation_inscription.js"></script>
-</head>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <script src="https://cdn.jsdelivr.net/wow/1.1.2/wow.min.js">‌​</script><script>new WOW().init();</script>
+
 
 
 <body data-spy="scroll" data-target=".navbar">
@@ -241,20 +244,19 @@
     </div>
   </div>
 
-
   <div class="container-fluid" id="about">
     <div class="row">
       <h1>Comment ça marche ?</h1>
-      <div class="col-lg-3">
+      <div class="col-lg-3 wow bounceInUp" data-wow-duration="1s" data-wow-delay="0s">
         <h2><img src="./imgs/inscription.gif" alt="inscription" style="width:20%;"><br>Je m'inscris sur la plateforme</h2>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.2s">
         <h2><img src="./imgs/agenda.png" alt="agenda" style="width:20%;"><br>Je rentre mes disponibilités</h2>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
         <h2><img src="./imgs/parcel.png" alt="parcel" style="width:20%;"><br>Je recois des colis pour mes voisins</h2>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.6s">
         <h2><img src="./imgs/monnaie.png" alt="monnaie" style="width:20%;"><br>Je suis rémunéré pour ce service rendu</h2>
       </div>
     </div>
