encore plus d'animations

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -263,7 +263,7 @@
     <br>
     <hr>
     <br>
-    <div class="row">
+    <div class="row bounceInUp wow" data-wow-duration="1.5s" data-wow-delay="0.4s">
       <h1>Concrètement</h1>
       <div class="col-lg-4">
         <h2><img src="./imgs/commande.png" alt="commande" style="width:20%;"> Commande</h2>
