changemment de la page d'accueil

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
   <link rel="icon apple-touch-icon apple-touch-icon-precomposed" type="image/png" href="./imgs/logo.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald|Droid+Serif">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/navbar.css">
   <link rel="stylesheet" href="./css/social_icons.css">
@@ -235,11 +235,11 @@
 
     <div class="container">
 
-      <h1>Une journée à la maison ?</h1>
+      <h1>Gagnez de l'argent en réceptionnant les colis de vos voisins</h1>
 
-      <h2>Réceptionnez des colis pour vos voisins et soyez rémunéré pour ce service</h2>
+      <h2>Mettez à profit les journées où vous restez chez vous</h2>
 
-      <button class="btn btn-default btn-lg" type="button" data-toggle="modal" data-target="#registerModal">Devenir Relayer</button>
+      <button class="btn btn-default" type="button" data-toggle="modal" data-target="#registerModal">Devenir Relayer</button>
 
     </div>
   </div>
@@ -275,7 +275,7 @@
       </div>
       <div class="col-lg-4">
         <h2><img src="./imgs/remuneration.png" alt="remuneration" style="width:20%;"> Rémunération</h2>
-        <p>En plus de rendre service à votre voisin, vous êtes rémunéré 2€ !</p>
+        <p>En plus de rendre service à votre voisin, vous êtes rémunéré 2€ par Relayers</p>
       </div>
     </div>
 
